deployment/ingress/default-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.taxi.com
    http:
      paths:
      - path: /communicatemgmt
        pathType: Prefix
        backend:
          service:
            name: communicatemgmt-service
            port:
              number: 7070
      - path: /usermgmt
        pathType: Prefix
        backend:
          service:
            name: usermgmt-service
            port:
              number: 9090
